// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordUpdateModal should render the PasswordUpdateModal 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show error notification when password update api call fails 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value="password123"
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value="password123"
        />
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show loader when updating password 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-loading-header"
    >
      Please wait...
    </div>
    <span
      class="css-1uyxhex-LoaderStyle"
    >
      <span
        class="css-m7eth1"
      />
      <span
        class="css-16zptrm"
      />
      <span
        class="css-1ma23m2"
      />
      <span
        class="css-ilqonc"
      />
      <span
        class="css-gmg1hm"
      />
      <span
        class="css-1sh5wjb"
      />
    </span>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show password length error when password is greater than 128 characters long 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value="SzTlcfBHyuAeEfNCmcKaTzEZR0ZROkG4ttlQGNhUNRiUGH2K4tZ7iPowCDzWQOHVn9Tk0XVCLUZuxeSr21MTbWArSPLzsnFgUOCPChETEU4FMiQf0jOiKB7GRzh7GGQik"
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value="SzTlcfBHyuAeEfNCmcKaTzEZR0ZROkG4ttlQGNhUNRiUGH2K4tZ7iPowCDzWQOHVn9Tk0XVCLUZuxeSr21MTbWArSPLzsnFgUOCPChETEU4FMiQf0jOiKB7GRzh7GGQik"
        />
      </div>
      <div
        class="font-sans font-semibold my-3 text-red-500 text-center"
        data-testid="password-update-error"
      >
        Password cannot be more than 128 characters
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show password length error when password is less than 8 characters long 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value="pass123"
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value="pass123"
        />
      </div>
      <div
        class="font-sans font-semibold my-3 text-red-500 text-center"
        data-testid="password-update-error"
      >
        Password must be at least 8 characters long
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show password validation error when new and confirmed passwords do not match 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value="password123"
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value="password12"
        />
      </div>
      <div
        class="font-sans font-semibold my-3 text-red-500 text-center"
        data-testid="password-update-error"
      >
        Passwords do not match
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show passwords are empty 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value=""
        />
      </div>
      <div
        class="font-sans font-semibold my-3 text-red-500 text-center"
        data-testid="password-update-error"
      >
        Please enter password to continue
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should update password and close modal on clicking update button 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          New Password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="new-password-input"
          maxlength="128"
          type="password"
          value="password123"
        />
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-4 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700"
        >
          Confirm password
        </label>
        <input
          class="rounded-md border bg-gray-50 border-gray-200 outline-none p-2"
          data-testid="confirm-password-input"
          maxlength="128"
          type="password"
          value="password123"
        />
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
